syntax = "proto3";
import "BasicTypes.proto";
import "DtoTypes.proto";

option csharp_namespace = "HistoryService";

package Histories;

service Histories {
	rpc LoadLocationDiffsFor(Long) returns (ListOfLocationDiff);
}